Use modifiers for spacing container object selectors, fixes #24

--- a/resources/scss/objects/_spacing-container.scss
+++ b/resources/scss/objects/_spacing-container.scss
@@ -1,16 +1,16 @@
-.o-spacing-container-m {
+.o-spacing-container--m {
   > * + * {
     margin-top: setting-spacing(m);
   }
 }
 
-.o-spacing-container-l {
+.o-spacing-container--l {
   > * + * {
     margin-top: setting-spacing(l);
   }
 }
 
-.o-spacing-container-xxxl {
+.o-spacing-container--xxxl {
   > * + * {
     margin-top: setting-spacing(xxxl);
   }
